# steganography

./: .gitignore  App.tsx  package-lock.json  package.json
backend/: pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/routes/: __init__.py  audio.py  health.py  image.py
backend/app/core/: config.py
backend/app/models/: schemas.py
backend/app/services/: __init__.py  audio_steganography.py  image_steganography.py  security.py
backend/app/stegovision_backend.egg-info/: PKG-INFO  SOURCES.txt
backend/stegovision_backend.egg-info/: SOURCES.txt  requires.txt
research_suite/: .pre-commit-config.yaml  Makefile  README.md  mkdocs.yml  pyproject.toml
research_suite/.github/workflows/: ci.yml
research_suite/docs/: api.md  ethics.md  examples.md  quickstart.md  threat-model.md
research_suite/examples/: audio_example.py  fs_example.py  image_example.py  network_example.py  run_all.py  text_example.py  video_example.py  watermark_example.py
research_suite/src/stegresearch/: __init__.py
research_suite/src/stegresearch.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
research_suite/src/stegresearch/api/: app.py
research_suite/src/stegresearch/carriers/: __init__.py
research_suite/src/stegresearch/carriers/audio/: __init__.py  echo.py  lsb.py
research_suite/src/stegresearch/carriers/fs/: __init__.py  ads.py  slack.py
research_suite/src/stegresearch/carriers/image/: __init__.py  dct.py  lsb.py
research_suite/src/stegresearch/carriers/network/: __init__.py  header.py  timing.py
research_suite/src/stegresearch/carriers/text/: __init__.py  whitespace.py  zerowidth.py
research_suite/src/stegresearch/cli/: main.py
research_suite/src/stegresearch/core/: __init__.py  benchmarks.py  config.py  interfaces.py  logging.py  metrics.py  registry.py
research_suite/src/stegresearch/datasets/: __init__.py  generate.py
research_suite/src/stegresearch/detect/: __init__.py  ml.py  statistics.py
research_suite/src/stegresearch/watermark/: __init__.py  dct.py
research_suite/tests/: test_audio_roundtrip.py  test_image_roundtrip.py  test_text_roundtrip.py
(+21 files in other folders)
